--- a/index.html
+++ b/index.html
@@ -98,37 +98,61 @@
             <section class="services">
                 <div class="container">
                     <hgroup>
-                        <h2>Our Services</h2>
+                        <h2 class="green">Our Services</h2>
                         <p>High-impact services for your business</p>
                     </hgroup>
                     <ul class="services-list">
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#pencil" />
+                                </svg>
+                            </div>
                             <h3>Content Marketing</h3>
                             <p>Our team creates engaging and shareable content that resonates with your audience, drives organic traffic</p>
                         </li>
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#pen" />
+                                </svg>
+                            </div>
                             <h3>Graphic Design</h3>
                             <p>Unlock the power of visual storytelling with our expert graphic design services tailored to elevate your brand and captivate.</p>
                         </li>
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#megaphone" />
+                                </svg>
+                            </div>
                             <h3>Digital Marketing</h3>
                             <p>Elevate your brand's online presence with our data-driven digital marketing strategies. From SEO and content marketing</p>
                         </li>
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#palette" />
+                                </svg>
+                            </div>
                             <h3>Web Design</h3>
                             <p>We specialize in creating visually stunning, user-friendly websites that align with your brand identity and deliver an exceptional.</p>
                         </li>
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#consult" />
+                                </svg>
+                            </div>
                             <h3>IT Consulting</h3>
                             <p>IT consulting, or information technology consulting, refers to the practice of providing advisory and implementation services</p>
                         </li>
                         <li>
-                            <i></i>
+                            <div class="svg-box">
+                                <svg>
+                                    <use xlink:href="assets/img/index/sprite.svg#brand" />
+                                </svg>
+                            </div>
                             <h3>Brand Identity</h3>
                             <p>It involves creating a unique and recognizable identity that sets the brand apart from competitors and resonates with the target audience.</p>
                         </li>
