finish about us block

--- a/index.html
+++ b/index.html
@@ -161,26 +161,36 @@
             </section>
             <section class="about-us">
                 <div class="container">
+                    <div class="gallery">
+                        <div class="photo-1 image-box">
+                            <img src="assets/img/index/gallery-1.jpg" alt="Photo of big team at work">
+                        </div>
+                        <div class="photo-2 image-box">
+                            <img src="assets/img/index/gallery-2.jpg" alt="Photo of big team at work">
+                        </div>
+                        <div class="photo-3 image-box">
+                            <img src="assets/img/index/gallery-3.jpg" alt="Photo of big team at work">
+                        </div>
+                    </div>
                     <div class="text-content">
                         <hgroup>
-                            <h3>About us</h3>
+                            <h2 class="green">About us</h2>
                             <p>The core mission behind all our work</p>
                         </hgroup>
                         <p>We are a passionate web design agency dedicated to creating stunning, user-friendly websites that help businesses grow.</p>
                         <div class="statistics">
                             <div>
-                                <div>330 +</div>
+                                <div class="green">330 +</div>
                                 Companies helped
                             </div>
                             <div>
-                                <div>230 +</div>
+                                <div class="green">230 +</div>
                                 Revenue generated
                             </div>
                         </div>
-                        <button type="button" class="start-trial-btn">Start your Free Trial</button>
+                        <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
                     </div>
                 </div>
-                <div class="gallery"></div>
             </section>
             <section class="process">
                 <div class="container">
