finish process section

--- a/index.html
+++ b/index.html
@@ -195,33 +195,57 @@
             <section class="process">
                 <div class="container">
                     <hgroup>
-                        <h2>Process</h2>
+                        <h2 class="green">Process</h2>
                         <p>Process that moves things forward</p>
                     </hgroup>
+                    <ul class="process-list">
+                        <li>
+                            <div class="header-box">
+                                <div class="svg-box">
+                                    <svg width="59" height="44">
+                                        <use xlink:href="assets/img/index/sprite.svg#lamp" />
+                                    </svg>
+                                </div>
+                                <h3>Ideate</h3>
+                            </div>
+                            <p>The ideation process is a crucial phase in the design process where creative thinking and brainstorming</p>
+                        </li>
+                        <li>
+                            <div class="header-box">
+                                <div class="svg-box">
+                                    <svg width="37" height="32">
+                                        <use xlink:href="assets/img/index/sprite.svg#letter" />
+                                    </svg>
+                                </div>
+                                <h3>Research</h3>
+                            </div>
+                            <p>Research is a critical component of the design process, helping designers understand the problem</p>
+                        </li>
+                        <li>
+                            <div class="header-box">
+                                <div class="svg-box">
+                                    <svg width="30" height="30">
+                                        <use xlink:href="assets/img/index/sprite.svg#set" />
+                                    </svg>
+                                </div>
+                                <h3>Create</h3>
+                            </div>
+                            <p>Designing a process involves several key steps to ensure clarity, efficiency, successful
+                                implementation</p>
+                        </li>
+                        <li>
+                            <div class="header-box">
+                                <div class="svg-box">
+                                    <svg width="30" height="30">
+                                        <use xlink:href="assets/img/index/sprite.svg#test" />
+                                    </svg>
+                                </div>
+                                <h3>Testing</h3>
+                            </div>
+                            <p>Testing is a crucial phase in the design process to ensure that the product or system meets the specified requirements</p>
+                        </li>
+                    </ul>
                 </div>
-                <ul class="process-list">
-                    <li>
-                        <i></i>
-                        <h3>Ideate</h3>
-                        <p>The ideation process is a crucial phase in the design process where creative thinking and brainstorming</p>
-                    </li>
-                    <li>
-                        <i></i>
-                        <h3>Reserach</h3>
-                        <p>Research is a critical component of the design process, helping designers understand the problem</p>
-                    </li>
-                    <li>
-                        <i></i>
-                        <h3>Create</h3>
-                        <p>Designing a process involves several key steps to ensure clarity, efficiency, successful
-                            implementation</p>
-                    </li>
-                    <li>
-                        <i></i>
-                        <h3>Testing</h3>
-                        <p>Testing is a crucial phase in the design process to ensure that the product or system meets the specified requirements</p>
-                    </li>
-                </ul>
             </section>
             <section class="recent">
                 <div class="container">
