finish recent projects and button effects

--- a/index.html
+++ b/index.html
@@ -251,33 +251,37 @@
                 <div class="container">
                     <h2>Recent Showcase</h2>
                     <div class="projects">
-                        <div class="project">
-                            <h3>Web UI design</h3>
-                            <p>Creative UI design</p>
-                            <div class="image-box">
-                                <img src="assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
+                        <div class="side left">
+                            <div class="project">
+                                <div class="image-box">
+                                    <img src="assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
+                                </div>
+                                <h3>Web UI design</h3>
+                                <p>Creative UI design</p>
+                            </div>
+                            <div class="project">
+                                <div class="image-box">
+                                    <img src="assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
+                                </div>
+                                <h3>UI Design</h3>
+                                <p>Creative Rebranding for logo</p>
                             </div>
                         </div>
-                        <button type="button" class="start-trial-btn">Start your Free Trial</button>
-                        <div class="project">
-                            <h3>To design Digital Strategy</h3>
-                            <p>Social Media Marketing</p>
-                            <div class="image-box">
-                                <img src="assets/img/index/project-round.jpg" alt="Person in orange overall with grey backpack staying close to orange round in dark grey background">
+                        <div class="side right">
+                            <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                            <div class="project">
+                                <div class="image-box">
+                                    <img src="assets/img/index/project-round.jpg" alt="Person in orange overall with grey backpack staying close to orange round in dark grey background">
+                                </div>
+                                <h3>To design Digital Strategy</h3>
+                                <p>Social Media Marketing</p>
                             </div>
-                        </div>
-                        <div class="project">
-                            <h3>UI Design</h3>
-                            <p>Creative Rebranding for logo</p>
-                            <div class="image-box">
-                                <img src="assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
-                            </div>
-                        </div>
-                        <div class="project">
-                            <h3>UI Design</h3>
-                            <p>Creative Rebranding for logo</p>
-                            <div class="image-box">
-                                <img src="assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
+                            <div class="project">
+                                <div class="image-box">
+                                    <img src="assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
+                                </div>
+                                <h3>UI Design</h3>
+                                <p>Creative Rebranding for logo</p>
                             </div>
                         </div>
                     </div>
