--- a/index.html
+++ b/index.html
@@ -253,35 +253,43 @@
                     <div class="projects">
                         <div class="side left">
                             <div class="project">
-                                <div class="image-box">
-                                    <img src="assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
-                                </div>
-                                <h3>Web UI design</h3>
-                                <p>Creative UI design</p>
+                                <a href="#">
+                                    <div class="image-box">
+                                        <img src="assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
+                                    </div>
+                                    <h3>Web UI design</h3>
+                                    <p>Creative UI design</p>
+                                </a>
                             </div>
                             <div class="project">
-                                <div class="image-box">
-                                    <img src="assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
-                                </div>
-                                <h3>UI Design</h3>
-                                <p>Creative Rebranding for logo</p>
+                                <a href="#">
+                                    <div class="image-box">
+                                        <img src="assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
+                                    </div>
+                                    <h3>UI Design</h3>
+                                    <p>Creative Rebranding for logo</p>
+                                </a>
                             </div>
                         </div>
                         <div class="side right">
                             <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
                             <div class="project">
-                                <div class="image-box">
-                                    <img src="assets/img/index/project-round.jpg" alt="Person in orange overall with grey backpack staying close to orange round in dark grey background">
-                                </div>
-                                <h3>To design Digital Strategy</h3>
-                                <p>Social Media Marketing</p>
+                                <a href="#">
+                                    <div class="image-box">
+                                        <img src="assets/img/index/project-round.jpg" alt="Person in orange overall with grey backpack staying close to orange round in dark grey background">
+                                    </div>
+                                    <h3>To design Digital Strategy</h3>
+                                    <p>Social Media Marketing</p>
+                                </a>
                             </div>
                             <div class="project">
-                                <div class="image-box">
-                                    <img src="assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
-                                </div>
-                                <h3>UI Design</h3>
-                                <p>Creative Rebranding for logo</p>
+                                <a href="#">
+                                    <div class="image-box">
+                                        <img src="assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
+                                    </div>
+                                    <h3>UI Design</h3>
+                                    <p>Creative Rebranding for logo</p>
+                                </a>
                             </div>
                         </div>
                     </div>
