--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </ul>
                 </nav>
                 <div class="buttons-block">
-                    <button type="button" class="contact-btn">Get in touch</button>
+                    <button type="button" class="btn contact-btn">Get in touch</button>
                     <button class="hamburger hamburger--squeeze btn" type="button" onclick="toggleMenu()">
                         <span class="hamburger-box">
                             <span class="hamburger-inner"></span>
@@ -55,7 +55,7 @@
                     <div class="text-content">
                         <h1>Ready to take your <span class="green">Business Growth</span> to the next level?</h1>
                         <p>Transforming ideas into stunning, user-friendly websites — our web design agency brings your digital vision to life! Creative and effective web design for your brand!</p>
-                        <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                        <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
                         <div class="partners">
                             <h4 class="green">Trusted by Leading Brands</h4>
                             <ul class="partners-list">
@@ -188,7 +188,7 @@
                                 Revenue generated
                             </div>
                         </div>
-                        <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                        <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
                     </div>
                 </div>
             </section>
@@ -272,7 +272,7 @@
                             </div>
                         </div>
                         <div class="side right">
-                            <button type="button" class="start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                            <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
                             <div class="project">
                                 <a href="#">
                                     <div class="image-box">
@@ -294,12 +294,20 @@
                         </div>
                     </div>
                     <div class="review">
-                        <img src="assets/img/index/miller.jpg" alt="CEO of an eduport Jacqueline Miller">
-                        <blockquote>Be genuine in your assessment, and provide constructive feedback to benefit both potential customers and the company providing the product or service.</blockquote>
-                        <p>Jacqueline Miller</p>
-                        <p>CEO of an eduport</p>
-                        <button type="button" class="arrow-left"></button>
-                        <button type="button" class="arrow-right"></button>
+                        <div class="image-box">
+                            <img src="assets/img/index/miller.jpg" alt="CEO of an eduport Jacqueline Miller">
+                        </div>
+                        <blockquote>
+                            <p>
+                                “Be genuine in your assessment, and provide constructive feedback to benefit both potential customers and the company providing the product or service.”
+                            </p>
+                        </blockquote>
+                        <p class="author">Jacqueline Miller</p>
+                        <p class="position">CEO of an eduport</p>
+                        <div class="buttons-block">
+                            <button type="button" class="slider arrow-left"></button>
+                            <button type="button" class="slider arrow-right"></button>
+                        </div>
                     </div>
                 </div>
             </section>
