add gallery animation

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
             <section class="about-us">
                 <div class="container">
                     <div class="gallery">
-                        <div class="photo-1 image-box">
+                        <div class="photo-1 photo image-box">
                             <img src="assets/img/index/gallery-1.jpg" alt="Photo of big team at work">
                         </div>
-                        <div class="photo-2 image-box">
+                        <div class="photo-2 photo image-box">
                             <img src="assets/img/index/gallery-2.jpg" alt="Photo of big team at work">
                         </div>
-                        <div class="photo-3 image-box">
+                        <div class="photo-3 photo image-box">
                             <img src="assets/img/index/gallery-3.jpg" alt="Photo of big team at work">
                         </div>
                     </div>
@@ -384,18 +384,18 @@
             </div>
         </footer>
     </div>
-    <script>
+    <!-- <script>
         function toggleMenu() {
             document.querySelector(".hamburger").classList.toggle('is-active')
             document.body.classList.toggle('open-mobile-menu');
         }
-        var lazyLoadInstance = new LazyLoad({});
+        let lazyLoadInstance = new LazyLoad({});
         const wow = new WOW({
             animateClass: 'animate__animated'
         });
         wow.init();
-    </script>
-
+    </script> -->
+    <script src="assets/js/gallery.js"></script>
 </body>
 
 </html>
