--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="text-content">
                         <h1>Ready to take your <span class="green">Business Growth</span> to the next level?</h1>
                         <p>Transforming ideas into stunning, user-friendly websites — our web design agency brings your digital vision to life! Creative and effective web design for your brand!</p>
-                        <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                        <a href="pages/portfolio.html" class="btn go-btn"><span class="btn-arrow"></span>View our works</a>
                         <div class="partners">
                             <h4 class="green">Trusted by Leading Brands</h4>
                             <ul class="partners-list">
@@ -195,7 +195,7 @@
                                 Revenue generated
                             </div>
                         </div>
-                        <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                        <a href="pages/about.html" class="btn go-btn"><span class="btn-arrow"></span>More about us</a>
                     </div>
                 </div>
             </section>
@@ -279,7 +279,7 @@
                             </div>
                         </div>
                         <div class="side right">
-                            <button type="button" class="btn start-trial-btn"><span class="btn-arrow"></span>Start your Free Trial</button>
+                            <a href="pages/portfolio.html" class="btn go-btn"><span class="btn-arrow"></span>More projects</a>
                             <div class="project">
                                 <a href="#">
                                     <div class="image-box">
@@ -358,15 +358,15 @@
                         <h4>Pages</h4>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">Conatct Us</a></li>
+                            <li><a href="pages/about.html">About</a></li>
+                            <li><a href="pages/portfolio.html">Portfolio</a></li>
+                            <li><a href="pages/contact.html">Conatct Us</a></li>
                         </ul>
                     </div>
                     <div class="subscribe-block">
                         <h4>Subscribe</h4>
-                        <form action="#" method="post">
-                            <input type="email" name="email" placeholder="Enter your email here">
+                        <form action="#" method="dialog">
+                            <input type="email" name="email" placeholder="Enter your email here" required>
                             <button type="submit">Subscribe</button>
                         </form>
                     </div>
@@ -374,7 +374,7 @@
                 <div class="block block-bottom">
                     <div class="copyright">
                         <h4>Copyright by</h4>
-                        Designed by Iconstica.com
+                        <a href="https://www.iconstica.com/" target="_blank" rel="nofollow noreferrer" title="Link to Iconstica.com">Designed by Iconstica.com</a>
                     </div>
                     <div class="telephone">
                         <h4>Contact</h4>
