--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="image-box">
-                        <img src="assets/img/index/first.png" alt="Web designers at the office">
+                    <div class="wrapper">
+                        <div class="image-box">
+                            <img src="assets/img/index/first.png" alt="Web designers at the office">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -260,7 +262,7 @@
                     <div class="projects">
                         <div class="side left">
                             <div class="project">
-                                <a href="#">
+                                <a href="pages/portfolio/red-flower.html">
                                     <div class="image-box">
                                         <img src="assets/img/index/project-flower.jpg" alt="Pink flower in blue circle with orange elements in grey background">
                                     </div>
@@ -269,7 +271,7 @@
                                 </a>
                             </div>
                             <div class="project">
-                                <a href="#">
+                                <a href="pages/portfolio/nature-ui.html">
                                     <div class="image-box">
                                         <img src="assets/img/index/project-bird.jpg" alt="Abstract figure with nature landscape, birds, animals and butterflies">
                                     </div>
@@ -281,7 +283,7 @@
                         <div class="side right">
                             <a href="pages/portfolio.html" class="btn go-btn"><span class="btn-arrow"></span>More projects</a>
                             <div class="project">
-                                <a href="#">
+                                <a href="pages/portfolio/orange-moon.html">
                                     <div class="image-box">
                                         <img src="assets/img/index/project-round.jpg" alt="Person in orange overall with grey backpack staying close to orange round in dark grey background">
                                     </div>
@@ -290,7 +292,7 @@
                                 </a>
                             </div>
                             <div class="project">
-                                <a href="#">
+                                <a href="pages/portfolio/travel-ui.html">
                                     <div class="image-box">
                                         <img src="assets/img/index/project-travel.jpg" alt="Traveller near sun in abstract round nature landscape">
                                     </div>
