finish hamburger button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <!-- Mobile menu -->
     <div class="page-shadow" onclick="toggleMenu()"></div>
     <div class="mobile-panel">
+        <div class="logo">
+            <a href="#">
+                <img src="assets/img/canvix-black-header-logo.svg" alt="Canvix Logo">
+            </a>
+        </div>
         <nav class="mobile-menu">
             <ul>
                 <li><a href="#">Home</a></li>
@@ -415,17 +420,18 @@
             </div>
         </footer>
     </div>
-    <!-- <script>
+    <script>
         function toggleMenu() {
             document.querySelector(".hamburger").classList.toggle('is-active')
             document.body.classList.toggle('open-mobile-menu');
         }
-        let lazyLoadInstance = new LazyLoad({});
-        const wow = new WOW({
-            animateClass: 'animate__animated'
-        });
-        wow.init();
-    </script> -->
+        // <!--
+        // let lazyLoadInstance = new LazyLoad({});
+        // const wow = new WOW({
+        //     animateClass: 'animate__animated'
+        // });
+        // wow.init();-->
+    </script>
     <script src="assets/js/gallery.js"></script>
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
