--- a/pages/about.html
+++ b/pages/about.html
@@ -5,18 +5,257 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/png" href="assets/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="assets/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Canvix" />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
-
+    <link type="text/css" rel="stylesheet" href="../assets/plugins/lightslider/css/lightslider.css">
+    <link rel="stylesheet" href="../assets/css/about.css">
+    <link rel="icon" type="image/png" href="../assets/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="../assets/favicon/favicon.svg">
+    <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="Canvix">
+    <link rel="manifest" href="../assets/favicon/site.webmanifest">
 </head>
 
 <body>
+    <!-- Mobile menu -->
+    <div class="page-shadow"></div>
+    <div class="mobile-panel">
+        <div class="logo">
+            <a href="#">
+                <img src="../assets/img/canvix-black-header-logo.svg" alt="Canvix Logo">
+            </a>
+        </div>
+        <nav class="mobile-menu">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact us</a></li>
+            </ul>
+        </nav>
+    </div>
 
+    <!-- Page content -->
+    <div class="page-wrapper">
+        <header>
+            <div class="container">
+                <div class="logo">
+                    <a href="../index.html">
+                        <img src="../assets/img/canvix-black-header-logo.svg" alt="Canvix Logo">
+                    </a>
+                </div>
+                <nav class="main-menu">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a class="current" href="#">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact us</a></li>
+                    </ul>
+                </nav>
+                <div class="buttons-block">
+                    <a href="contact.html" class="btn contact-btn">Get in touch</a>
+                    <button class="hamburger hamburger--squeeze btn" type="button">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="first">
+                <div class="container">
+                    <div class="text-content">
+                        <p>Pleasure and so read the was hope.</p>
+                        <h1>Ready to take your <span class="green">your business</span> to the next level?</h1>
+                        <p>Transforming ideas into stunning, user-friendly websites — our web design agency brings your digital vision to life! Creative and effective web design for your brand!</p>
+                        <div class="rate">
+                            <div class="image-box">
+                                <img src="../assets/img/about/review-author.png" alt="John Doe">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gallery">
+                        <div class="photo-1 photo image-box">
+                            <img src="../assets/img/about/photo-4.jpg" alt="Photo of big team at work">
+                        </div>
+                        <div class="photo-2 photo image-box">
+                            <img src="../assets/img/index/gallery-2.jpg" alt="Photo of big team at work">
+                        </div>
+                        <div class="photo-3 photo image-box">
+                            <img src="../assets/img/index/gallery-3.jpg" alt="Photo of big team at work">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="services">
+                <div class="container">
+                    <ul class="statistics-list">
+                        <li>
+                            <div>200+</div>
+                            <h3>We’re a family</h3>
+                            <p>Speedily say has suitable disposal add boy. On fourth doubt miles of child. Exercise joy man children rejoiced.</p>
+                        </li>
+                        <li>
+                            <div>99%</div>
+                            <h3>Graphic Design</h3>
+                            <p>Perceived end knowledge certainly day sweetness why cordially. Ask a quick six seven offer see among.</p>
+                        </li>
+                        <li>
+                            <div>1.5M+</div>
+                            <h3>Digital Marketing</h3>
+                            <p>Rooms oh fully taken by worse do. Points afraid but may end law lasted. Was out laughter raptures returned outweigh.</p>
+                        </li>
+                </div>
+            </section>
+            <section class="our-mission">
+                <div class="container">
+                    <div class="text-content">
+                        <hgroup>
+                            <h2 class="green">Our Mission</h2>
+                            <p>Boost your with your business.</p>
+                        </hgroup>
+                        <p>He moonlights difficult engrossed it, sportsmen. Interested has all Devonshire difficulty gay assistance joy.</p>
+                        <ul>
+                            <li>Moonlight newspaper up its enjoyment</li>
+                            <li>She new course gets living.</li>
+                            <li>Rooms oh fully taken by worse.</li>
+                            <li>She new course gets living.</li>
+                            <li>Perceived end certainly day.</li>
+                            <li>Preference any astonished unreserved Mrs.</li>
+                        </ul>
+                    </div>
+                    <div class="side-statistics">
+                        <div class="image-box">
+                            <img src="../assets/img/about/mission-photo-1.jpg" alt="Team at work">
+                        </div>
+                        <div class="stats">
+                            <div>
+                                <div>10k</div>
+                                <div>Great conversations per month</div>
+                            </div>
+                            <div>
+                                <div>95+</div>
+                                <div>Project Complete</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image-box">
+                        <img src="../assets/img/about/mission-photo-2.jpg" alt="Business partners">
+                    </div>
+            </section>
+            <section class="our-team">
+                <div class="container">
+                    <h2>Our team</h2>
+                    <div class="team-members">
+                        <div class="member">
+                            <ul class="socials-list">
+                                <li>
+                                    <a href="https://www.facebook.com/" target="_blank" rel="nofollow noreferrer" title="Link to Facebook">
+                                        <svg>
+                                            <use xlink:href="assets/img/index/sprite.svg#fb" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/" target="_blank" rel="nofollow noreferrer" title="Link to Instagram">
+                                        <svg>
+                                            <use xlink:href="assets/img/index/sprite.svg#inst" />
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/" target="_blank" rel="nofollow noreferrer" title="Link to LinkedIn">
+                                        <svg>
+                                            <use xlink:href="assets/img/index/sprite.svg#linkedin" />
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                            <div class="image-box">
+                                <img src="../assets/img/about/team-1.jpg" alt="Founder & CEO Esther Howards">
+                            </div>
+                            <div>Esther Howards</div>
+                            <div>Founder & CEO</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contacts">
+                <div class="container">
+                    <p>Enough talk, let’s get to work</p>
+                    <a href="contact.html"></a>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="container">
+                <div class="block block-top">
+                    <div class="about">
+                        <img src="assets/img/canvix-footer-logo.svg" alt="Canvix logo">
+                        <p>We’re a team of strategic creator and digital innovator, united focus in our pursuit of mastery and joyful.</p>
+                    </div>
+                    <div class="pages">
+                        <h4>Pages</h4>
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="contact.html">Conatct Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="subscribe-block">
+                        <h4>Subscribe</h4>
+                        <form action="#" method="dialog">
+                            <input type="email" name="email" id="email" placeholder="Enter your email here" required>
+                            <button type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="block block-bottom">
+                    <div class="copyright">
+                        <h4>Copyright by</h4>
+                        <a href="https://www.iconstica.com/" target="_blank" rel="nofollow noreferrer" title="Link to Iconstica.com">Designed by Iconstica.com</a>
+                    </div>
+                    <div class="telephone">
+                        <h4>Contact</h4>
+                        <a href="tel:+10124574578">+0 12 457 4578</a>
+                    </div>
+                    <div class="address">
+                        <h4>Address</h4>
+                        <address>
+                            119 Tanglewood Lane Gulfport, MS 39503
+                        </address>
+                    </div>
+                    <ul class="socials-list">
+                        <li>
+                            <a href="https://www.facebook.com/" target="_blank" rel="nofollow noreferrer" title="Link to Facebook">
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#fb" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/" target="_blank" rel="nofollow noreferrer" title="Link to Instagram">
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#inst" />
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/" target="_blank" rel="nofollow noreferrer" title="Link to LinkedIn">
+                                <svg>
+                                    <use xlink:href="../assets/img/index/sprite.svg#linkedin" />
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="../assets/js/gallery.js"></script>
+    <script src="../assets/js/harmburger.js"></script>
+    <script src="../assets/js/placeholder.js"></script>
 </body>
 
 </html>
